fuzzer/out.log
[cargo-make] INFO - cargo make 0.37.21
[cargo-make] INFO - Calling cargo metadata to extract project info
[cargo-make] INFO - Cargo metadata done
[cargo-make] INFO - Project: fuzzer
[cargo-make] INFO - Build File: Makefile.toml
[cargo-make] INFO - Task: run
[cargo-make] INFO - Profile: development
[cargo-make] INFO - Running Task: build_zephyr
[1/9] Building C object zephyr/drivers/entropy/CMakeFiles/drivers__entropy.dir/fake_entropy_native_posix.c.obj
[2/9] Building C object zephyr/drivers/ethernet/CMakeFiles/drivers__ethernet.dir/eth_native_posix.c.obj
[3/9] Building C object CMakeFiles/app.dir/src/socket_echo.c.obj
FAILED: CMakeFiles/app.dir/src/socket_echo.c.obj 
ccache /usr/bin/gcc -DKERNEL -DK_HEAP_MEM_POOL_SIZE=1024 -D__LINUX_ERRNO_EXTENSIONS__ -D__ZEPHYR__=1 -I/home/ubuntu/zephyrproject/zephyr/build/zephyr/include/generated/zephyr -I/home/ubuntu/zephyrproject/zephyr/include -I/home/ubuntu/zephyrproject/zephyr/build/zephyr/include/generated -I/home/ubuntu/zephyrproject/zephyr/soc/native/inf_clock -I/home/ubuntu/zephyrproject/zephyr/boards/native/native_sim -I/home/ubuntu/zephyrproject/zephyr/include/zephyr/posix -I/home/ubuntu/zephyrproject/zephyr/scripts/native_simulator/common/src/include -I/home/ubuntu/zephyrproject/zephyr/scripts/native_simulator/native/src/include -I/home/ubuntu/zephyrproject/zephyr/subsys/net/l2 -isystem /home/ubuntu/zephyrproject/zephyr/lib/libc/common/include -isystem /home/ubuntu/zephyrproject/zephyr/build/modules/picolibc/picolibc/include -fno-strict-aliasing -Os -imacros /home/ubuntu/zephyrproject/zephyr/build/zephyr/include/generated/zephyr/autoconf.h -fno-printf-return-value -fno-common -g -gdwarf-4 -fdiagnostics-color=always -Wall -Wformat -Wformat-security -Wno-format-zero-length -Wdouble-promotion -Wno-pointer-sign -Wpointer-arith -Wexpansion-to-defined -Wno-unused-but-set-variable -Werror=implicit-int -fno-pic -fno-pie -fno-asynchronous-unwind-tables -fno-reorder-functions --param=min-pagesize=0 -fno-defer-pop -fmacro-prefix-map=/home/ubuntu/zephyrproject/zephyr/samples/net/sockets/echo=CMAKE_SOURCE_DIR -fmacro-prefix-map=/home/ubuntu/zephyrproject/zephyr=ZEPHYR_BASE -fmacro-prefix-map=/home/ubuntu/zephyrproject=WEST_TOPDIR -ffunction-sections -fdata-sections -m32 -msse2 -mfpmath=sse -fvisibility=hidden -nostdinc -isystem /usr/lib/gcc/x86_64-linux-gnu/11/include -include /home/ubuntu/zephyrproject/zephyr/arch/posix/include/undef_system_defines.h -ffreestanding -fno-builtin -D_POSIX_THREADS -std=c11 -MD -MT CMakeFiles/app.dir/src/socket_echo.c.obj -MF CMakeFiles/app.dir/src/socket_echo.c.obj.d -o CMakeFiles/app.dir/src/socket_echo.c.obj -c /home/ubuntu/zephyrproject/zephyr/samples/net/sockets/echo/src/socket_echo.c
In file included from /home/ubuntu/zephyrproject/zephyr/samples/net/sockets/echo/src/socket_echo.c:20:
/home/ubuntu/zephyrproject/zephyr/scripts/native_simulator/common/src/include/nsi_host_trampolines.h:49:1: error: unknown type name ‘bool’
   49 | bool is_setup(void);
      | ^~~~
/home/ubuntu/zephyrproject/zephyr/scripts/native_simulator/common/src/include/nsi_host_trampolines.h:1:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
  +++ |+#include <stdbool.h>
    1 | /*
In file included from /home/ubuntu/zephyrproject/zephyr/samples/net/sockets/echo/src/socket_echo.c:20:
/home/ubuntu/zephyrproject/zephyr/samples/net/sockets/echo/src/socket_echo.c: In function ‘main’:
/home/ubuntu/zephyrproject/zephyr/scripts/native_simulator/common/src/include/nsi_host_trampolines.h:25:28: warning: too many arguments for format [-Wformat-extra-args]
   25 | #define MY_LOG(...) printf("%s\n", __VA_ARGS__);
      |                            ^~~~~~
/home/ubuntu/zephyrproject/zephyr/samples/net/sockets/echo/src/socket_echo.c:91:17: note: in expansion of macro ‘MY_LOG’
   91 |                 MY_LOG("Connection #%d from %s\n", counter++, addr_str);
      |                 ^~~~~~
/home/ubuntu/zephyrproject/zephyr/scripts/native_simulator/common/src/include/nsi_host_trampolines.h:25:28: warning: too many arguments for format [-Wformat-extra-args]
   25 | #define MY_LOG(...) printf("%s\n", __VA_ARGS__);
      |                            ^~~~~~
/home/ubuntu/zephyrproject/zephyr/samples/net/sockets/echo/src/socket_echo.c:119:17: note: in expansion of macro ‘MY_LOG’
  119 |                 MY_LOG("Connection from %s closed\n", addr_str);
      |                 ^~~~~~
[4/9] Linking C static library zephyr/drivers/entropy/libdrivers__entropy.a
[5/9] Linking C static library zephyr/drivers/ethernet/libdrivers__ethernet.a
ninja: build stopped: subcommand failed.
